[gd_scene load_steps=4 format=2]

[ext_resource path="res://Examples/TrueOrFalse/TrueOrFalse.gd" type="Script" id=1]
[ext_resource path="res://addons/QuizNodes/QuizMultipleChoice.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4

[node name="TrueOrFalse" type="Node"]
script = ExtResource( 1 )

[node name="TrueOrFalse" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": SubResource( 1 )
}
type = 0

[node name="Question" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 90.0
text = "test"
align = 1
valign = 1

[node name="Result" type="Label" parent="."]
margin_top = 100.0
margin_right = 512.0
margin_bottom = 190.0
text = "Resultado"
align = 1
valign = 1

[node name="True" type="Button" parent="."]
margin_left = 10.0
margin_top = 210.0
margin_right = 150.0
margin_bottom = 290.0

[node name="False" type="Button" parent="."]
margin_left = 360.0
margin_top = 210.0
margin_right = 500.0
margin_bottom = 290.0
[connection signal="pressed" from="True" to="." method="_on_True_pressed"]
[connection signal="pressed" from="False" to="." method="_on_False_pressed"]
